v0.5.0 -fixed position issues -header items alignment yet to be fixed

--- a/style.css
+++ b/style.css
@@ -153,7 +153,7 @@ img.btimg {
 }
 
 
-#nav2 {
+div.nav2 {
   position: relative;
   background: #F0F0F0;
   width: auto;
@@ -165,27 +165,47 @@ img.btimg {
 }
 
 div.body {
+  position: relative;
   width: auto;
   height: 900px
 }
 
 nav.sidestory {
+  position: absolute;
   background: gray; /* must remove; for demostation only */
   height: 450px;
   width: 30%;
-  float: right;
+  left: 70%;
 
 }
 
 div.article {
+  position: absolute;
   background: black; /* must remove; for demostation only */
   height: 450px;
   width: 70%;
-  float: left;
+  left: 0;
+}
+
+#newprograms {
+  bottom: 50%;
+}
+
+#news {
+  top: 50%;
 
 }
 
+#article1 {
+  bottom: 50%;
+}
+
+#article2 {
+  top: 50%;
+}
+
 #footer {
+  position: relative;
   background: #F0F0F0;
   height: 400px;
   width: auto;
